Fix font size on ios

--- a/css/index.css
+++ b/css/index.css
@@ -259,7 +259,7 @@ a:active{
     font-size: 1em;
 }
 #comment div form label div {
-    font-size: 0.8em;
+    font-size: 0.6em;
     padding-right: 20px;
 }
 #comment div form input[type="text"]{
